--- a/practice1/practice1/practice1.vcxproj
+++ b/practice1/practice1/practice1.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="연습1.cpp" />
+    <ClCompile Include="BOJ 1058.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
