--- a/practice1/practice1/practice1.vcxproj
+++ b/practice1/practice1/practice1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{0b7ae6a4-618d-4c77-bb89-a3f814424f22}</ProjectGuid>
     <RootNamespace>practice1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>BOJ</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
